--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,4 @@ before_install:
 
 script:
         - gox -output "dist/{{.OS}}_{{.Arch}}_{{.Dir}}" -ldflags="-X main.cid=$CLIENT_ID -X main.secret=$CLIENT_SECRET"
-        - ghr --username syui --token $GITHUB_TOKEN `git tag|tail -1` dist/
+        - ghr --username syui --token $GITHUB_TOKEN 0.1 dist/
